# simple-scara-robot

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
analysis/: README.md  analysis.py
analysis/displacement_vector/: README.md
analysis/rotation_matrix/: README.md  rotation_matrices.py
assets/stl/: board.3mf  board.stl
assets/stl/end_effector/: spur_wheel.stl
clion_scripts/: clion_build.sh  clion_python.sh  envvars.txt
docker/: Dockerfile  entrypoint.sh  startcontainer.sh
print/: Coupling Bracket.stl  Linear.stl  attacher.3mf  attacher.stl  bracket.stl  link.stl  spur.stl
robot_description/: config.yaml  robot.urdf
scara_ws/frames/: frames_2025-09-01_14.38.40.gv
scara_ws/src/cpp_examples/: CMakeLists.txt  package.xml
scara_ws/src/cpp_examples/src/: SimpleServiceClient.cpp  SimpleServiceClient.h  SimpleServiceServer.cpp  SimpleServiceServer.h
scara_ws/src/scara_controller/: CMakeLists.txt  package.xml
scara_ws/src/scara_controller/config/: scara_controllers.yaml
scara_ws/src/scara_controller/launch/: controller.launch.py
scara_ws/src/scara_description/: CMakeLists.txt  package.xml
scara_ws/src/scara_description/launch/: display.launch.py  gazebo.launch.py
scara_ws/src/scara_description/meshes/: actuator.part  (+6 more)
scara_ws/src/scara_moveit/: CMakeLists.txt  package.xml
scara_ws/src/scara_msgs/: CMakeLists.txt  package.xml
scara_ws/src/scara_utils/: CMakeLists.txt  package.xml
scara_ws/src/scara_utils/src/: AngleConverter.cpp  AngleConverter.h
src/: InverseKinematics.cpp  InverseKinematics.h  Joint.cpp  Joint.h  main.cpp
(+11 files in other folders)
